// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridBefore renders 0 1`] = `
Array [
  .c0 {
  grid-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders function 1`] = `
Array [
  .c0 {
  grid-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders negative number 1`] = `
Array [
  .c0 {
  grid-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-before: July;
  }
}

@media April {
  .c0 {
    grid-before: August;
  }
}

@media January {
  .c0 {
    grid-before: September;
  }
}

@media April {
  .c0 {
    grid-before: November;
  }
}

@media June {
  .c0 {
    grid-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-before: July;
  }
}

@media April {
  .c0 {
    grid-before: August;
  }
}

@media January {
  .c0 {
    grid-before: September;
  }
}

@media April {
  .c0 {
    grid-before: November;
  }
}

@media June {
  .c0 {
    grid-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-before: January;
  }
}

@media April {
  .c0 {
    grid-before: December;
  }
}

@media January {
  .c0 {
    grid-before: April;
  }
}

@media April {
  .c0 {
    grid-before: May;
  }
}

@media June {
  .c0 {
    grid-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-before: January;
  }
}

@media April {
  .c0 {
    grid-before: December;
  }
}

@media January {
  .c0 {
    grid-before: April;
  }
}

@media April {
  .c0 {
    grid-before: May;
  }
}

@media June {
  .c0 {
    grid-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders postitive number 1`] = `
Array [
  .c0 {
  grid-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders string 1`] = `
Array [
  .c0 {
  grid-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridBefore renders valid theme path 1`] = `
Array [
  .c0 {
  grid-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
